--- a/Automacao-Processo-de-converscao-PDF_JPG_/pom.xml
+++ b/Automacao-Processo-de-converscao-PDF_JPG_/pom.xml
@@ -37,6 +37,12 @@
             <version>5.3.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
